@@ -2,6 +2,7 @@
   * Support the -alpha remove option (use it to remove transparency from PDF,
     convert -density 200 apple.pdf -alpha remove x:).
   * Use union instead of casting gzFile and BZFILE.
+  * Don't treat PSD user channel as alpha (patch from Dominic Benson).
 
 2012-01-30  6.7.5-1 Glenn Randers-Pehrson <glennrp@image...>
   * Fix bug in png coder (spurious warning, reference
